networkpolicy/sample-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod-1
  namespace: default
  labels:
    app: pod1
spec:
  containers:
  - name: nginx-container
    image: nginx:1.21.5
---
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod-2
  namespace: default
  labels:
    app: pod2
spec:
  containers:
  - name: nginx-container
    image: nginx:1.21.5
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod-3
  namespace: test
  labels:
    app: pod3
spec:
  containers:
  - name: nginx-container
    image: nginx:1.21.5
---
apiVersion: v1
kind: Pod
metadata:
  name: sample-pod-4
  namespace: test
  labels:
    app: pod4
spec:
  containers:
  - name: nginx-container
    image: nginx:1.21.5
