networkpolicy/all-deny-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: all-deny-networkpolicy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
