networkpolicy/sp-ip-allow-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sp-ip-allow-networkpolicy
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: pod3
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.173.130/32
    ports:
    - protocol: TCP
      port: 80
