networkpolicy/sp-pod-allow-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sp-pod-allow-networkpolicy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: pod2
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: pod1
    ports:
    - protocol: TCP
      port: 80
